Fix profile detail bar styling (inconsistent button sizes, incorrect padding on mobile and rank being pushed off-screen on smaller devices)

--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -132,7 +132,6 @@
 @profile-header-height: 350px;
 @profile-user-bar-height: 60px;
 @profile-avatar-size: 120px;
-@profile-stats-box-width: 280px; // FIXME: remove this
 @profile-stats-box-width-desktop: 300px;
 
 @beatmapset-avatar-size: 50px;
